tests/baselines/reference/jsFileCompilationDuplicateVariableErrorReported.errors.txt
tests/cases/compiler/a.ts(1,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' must be of type 'string', but here has type 'number'.


==== tests/cases/compiler/b.js (0 errors) ====
    var x = "hello";
    
==== tests/cases/compiler/a.ts (1 errors) ====
    var x = 10; // Error reported
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' must be of type 'string', but here has type 'number'.
!!! related TS6203 tests/cases/compiler/b.js:1:5: 'x' was also declared here.
    